# easyvec

./: .gitignore  README.md  pyproject.toml
easyvec/: __init__.py  vec3.py
examples/: calc.py
