[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "easyvec"
version = "0.1.2"
description='A simple vector manipulation module'
readme = "README.md"
requires-python = ">=3.7"
dependencies = []
authors = [
    { name = 'Yo Kato', email = 'saltinthedesertyou@gmail.com' },
]

